# DRP-004-FW

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  stm32g031g6ux_FLASH.ld
Drivers/: CMakeLists.txt
Inc/: adc.h  board.h  core.h  dma.h  gpio.h  main.h  rtc.h  servo.h
Inc/Application/: ldr.h
Inc/TIM/: tim1.h
Inc/app/: app_config.h  app_init.h  app_ldr.h  app_power.h  app_state.h  task_list.h
Inc/platform/: adc.h  core.h  dma.h  dmamux.h  gpio.h  rtc.h  servo.h
Inc/platform/TIM/: gp_tim.h  tim1.h
Src/: adc.c  board.c  core.c  dma.c  dmamux.c  gpio.c  main.c  rtc.c  servo.c
Src/Application/: ldr.c
Src/TIM/: tim1.c
Src/app/: app_init.c  app_ldr.c  app_power.c  app_state.c  task_list.c
Src/platform/: adc.c  core.c  dma.c  dmamux.c  gpio.c  interrupt_handlers.c  rtc.c  servo.c
Src/platform/TIM/: tim1.c
Startup/: startup_stm32g031g6ux.s
cmake/: vscode_generated.cmake
